# star-adventurer-alpaca

./: .gitignore  Cargo.toml  Rocket.toml  test_config.toml
src/: alpaca_general.rs  alpaca_state.rs  alpaca_telescope.rs  config.rs  main.rs  request.rs  response.rs
src/astro_math/: mod.rs
src/lib/proc_macros/: Cargo.toml
src/lib/proc_macros/src/: lib.rs
src/lib/star_adventurer_control/: Cargo.toml
src/lib/star_adventurer_control/src/: astro_math.rs  config.rs  enums.rs  errors.rs  guide.rs  lib.rs  observing_pos.rs  parking.rs  pointing_pos.rs  slew.rs  sync.rs  target.rs  tracking.rs
src/lib/star_adventurer_control/tests/: integration_test.rs
src/telescope_control/: config.rs  driver.rs  guide.rs  mod.rs  mount_limits.rs  observing_pos.rs  parking.rs  pointing_pos.rs  slew.rs  slew_def.rs  star_adventurer.rs  sync.rs  target.rs  test_util.rs  tracking.rs
src/telescope_control/commands/: guide.rs  observing_pos.rs  parking.rs  pointing_pos.rs  slew.rs  sync.rs  target.rs  tracking.rs
src/telescope_control/connection/: ascom_state.rs  con.rs  mod.rs  potential_connection.rs
src/telescope_control/connection/motor/: builder.rs  consts.rs  mc.rs  mod.rs  motor_state.rs  result.rs  waiters.rs
src/telescope_control/connection/motor/motor_accessor_types/: locked.rs  open.rs
src/telescope_control/connection/tasks/: abort_slew.rs  mod.rs  move_motor.rs  park.rs  pulse_guide.rs  set_tracking.rs  slew_to.rs
src/util/: abort_result.rs  consts.rs  infinite_future.rs  lockable.rs  mod.rs  result.rs
src/util/enums/: alignment_mode.rs  alternate.rs  axis.rs  equatorial_coordinate_type.rs  guide_direction.rs  mod.rs  motion_rate.rs  motion_state.rs  motor_encoder_direction.rs  motor_state.rs  pier_side.rs  rotation_direction.rs  tracking_direction.rs  tracking_rate.rs
src/util/tasks/: abortable_task.rs  waitable_task.rs
