[package]
name = "star_adventurer_alpaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0"
serde_repr = "0.1.7"
rand = "0.8.4"
proc_macros = { path = "src/lib/proc_macros" }
synscan = { git = "https://github.com/jsorrell/rust-synscan", branch = "main" }
chrono = "0.4.19"
tokio = { version = "1.16.1", features = ["full"] }
assert_float_eq = "1.1.3"
polynomials = "0.2.4"
confy = "0.4.0"
