[package]
name = "star_adventurer_alpaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "^0.5.0-rc.1", features = ["json"] }
serde = "^1"
serde_json = "^1"
serde_repr = "^0.1"
rand = "^0.8"
proc_macros = { path = "src/lib/proc_macros" }
synscan = { git = "https://github.com/jsorrell/rust-synscan", branch = "main", features = ["serialport"] }
chrono = "^0.4"
tokio = { version = "^1", features = ["full"] }
assert_float_eq = "^1"
polynomials = "^0.2"
confy = "^0.4"
serialport = "^4"
num_enum = "^0.5"
retry = "^1.3"
log = "^0.4"
env_logger = "^0.9"
