[package]
name = "star_adventurer_alpaca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.159"
rand = "0.8.5"
synscan = { git = "https://github.com/jsorrell/rust-synscan", branch = "main", features = ["serialport"] }
chrono = "0.4.24"
tokio = { version = "1.27.0", features = ["full"] }
assert_float_eq = "1.1.3"
polynomials = "0.2.4"
confy = "0.5.1"
serialport = "4.2.0"
num_enum = "0.6.0"
retry = "^1.3"
async-trait = "0.1.68"
spin_sleep = "1.1.1"
ascom-alpaca = { version = "0.1.0", path = "../ascom-alpaca-rs", features = ["server", "telescope"] }
tracing-subscriber = "0.3.16"
anyhow = "1.0.70"
tracing = "0.1.37"
