[package]
name = "proc_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.86", features = ['full']}
quote = "1.0.15"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
proc-macro2 = "1.0.36"
