[package]
name = "star_adventurer_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synscan = { path = "/home/jsorrell/Projects/rust-synscan" }
chrono = "0.4.19"
tokio = { version = "1.16.1", features = ["full"] }
assert_float_eq = "1.1.3"
polynomials = "0.2.4"
serde = "1.0.136"
confy = "0.4.0"
